# DustSimulation

./: CMakeLists.txt  CompressionInterpolation.cpp  CompressionInterpolation.h  Constants.h  Contact.cpp  Contact.h  CudaDefines.cuh  CudaKernels.cuh  CudaWallInteraction.cpp  CudaWallInteraction.h  CudaWallKernels.cuh  CudaWallKernelsWrapper.cu  CudaWallKernelsWrapper.cuh  CudaWrapper.cu  CudaWrapper.cuh  Double3.h  README.md  Simulation.cpp  Simulation.h  SimulationCuda.cpp  SimulationCuda.h  SimulationLib.cpp  SimulationLib.h  SpatialGrid.cpp  SpatialGrid.h  Wall.cpp  Wall.h  myCubWrapper.cu  myCubWrapper.cuh  myCubWrapper.h
Main/: Main.cpp  main_Nils_Test.cpp  main_agg_collider.cpp  main_agglomerate_analyzer.cpp  main_agglomerate_builder.cpp  main_bam_builder.cpp  main_bouncing_detector.cpp  main_brazilian_test.cpp  main_bulk_modulus.cpp  main_cake_builder.cpp  main_cake_preparator.cpp  main_cms_tracker.cpp  main_coll_analyzer.cpp  main_collider.cpp  main_collision_analyzer.cpp  main_collision_manager.cpp  main_compaction.cpp  main_compactor.cpp  main_compression_no_sw.cpp  main_compression_sw.cpp  main_cuda_agg_collider (copy).cpp  main_cuda_agg_collider.cpp  main_cuda_agg_collider.cpp_bak  main_cuda_agg_collider_generator.cpp  main_cuda_blum.cpp  main_cuda_collider.cpp  main_cuda_compactor.cpp  main_cuda_compression_sw.cpp  main_cuda_compression_sw.cpp_  main_cuda_compression_sw_fixed_size.cpp  main_cuda_continue.cpp  main_cuda_copy_test.cpp  main_cuda_erosion.cpp  main_cuda_erosion_PCA_projectiles.cpp  main_cuda_erosion_bak.cpp  main_cuda_fragment_analyzer.cpp  main_cuda_load.cpp  main_cuda_relax.cpp  main_cuda_sim.cpp  main_cuda_sphere_compaction.cpp  (+30 more)
Materials/: Silicate.mat  Silicate_fit_to_experiment.mat
cub/device/dispatch/: #dispatch_reduce.cuh#
nvidiaHelperFuncs/: helper_cuda.h  helper_image.h  helper_string.h  my_device_helper_math.h  my_helper_math.h
visualization/: MainWindow.cpp  MainWindow.h  Matrix.h  Vector.h
visualization/subdir/: AddParticlesWidget.cpp  AddParticlesWidget.h  AgglomerateInfoWidget.cpp  AgglomerateInfoWidget.h  CollideAgglomeratesWidget.cpp  CollideAgglomeratesWidget.h  DisplayOptionsWidget.cpp  DisplayOptionsWidget.h  DuplicationWidget.cpp  DuplicationWidget.h  InitAggregateWidget.cpp  InitAggregateWidget.h  InitBoxWidget.cpp  InitBoxWidget.h  InitCakeWidget.cpp  InitCakeWidget.h  InitChainWidget.cpp  InitChainWidget.h  InitSimWidget.cpp  InitSimWidget.h  InitWallWidget.cpp  InitWallWidget.h  MaterialInfoWidget.cpp  MaterialInfoWidget.h  ModifyWallWidget.cpp  ModifyWallWidget.h  OpenGLNavigationWidget.cpp  OpenGLNavigationWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  RotationWidget.cpp  RotationWidget.h  Shaders.cpp  Shaders.h  SimulationThread.cpp  SimulationThread.h  SimulationVisualization.cpp  SimulationVisualization.h  SliceWidget.cpp  SliceWidget.h  (+4 more)
